templates/catalog-server_template.yaml
---
# Source: catalog-server/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-catalog-server
  labels:
    helm.sh/chart: catalog-server-0.5.3
    app.kubernetes.io/name: catalog-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.8.8"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: catalog-server-0.5.3
      app.kubernetes.io/name: catalog-server
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "0.8.8"
      app.kubernetes.io/managed-by: Helm
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-kafka
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cp-schema-registry
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: management-portal
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radar-s3-connector
  policyTypes:
  - Ingress
  - Egress
---
# Source: catalog-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-catalog-server
  labels:
    app.kubernetes.io/name: catalog-server
    helm.sh/chart: catalog-server-0.5.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9010
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: catalog-server
    app.kubernetes.io/instance: release-name
---
# Source: catalog-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-catalog-server
  labels:
    app.kubernetes.io/name: catalog-server
    helm.sh/chart: catalog-server-0.5.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog-server
      app.kubernetes.io/instance: release-name
  strategy:
    rollingUpdate:
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catalog-server
        app.kubernetes.io/instance: release-name
      annotations:
        backup.velero.io/backup-volumes: config
        checksum/configmap: 9547e3b21c6c3c3ccd31ad078ec3fd568d43bbd3c534f9912a1f6e5f502717a6
    spec:
      securityContext:
        fsGroup: 101
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - catalog-server
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: catalog-server
          securityContext:
            {}
          image: "radarbase/radar-schemas-tools:0.8.8"
          args:
            - radar-catalog-server
            - -c
            - /etc/radar-schemas-tools/config.yaml
            - /schema/merged
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9010
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /source-types
              port: http
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /source-types
              port: http
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/radar-schemas-tools
            - name: config-schemas
              mountPath: /schema/conf
      volumes:
        - name: config
          configMap:
            name: release-name-catalog-server
        - name: config-schemas
          persistentVolumeClaim:
            claimName: release-name-catalog-server
---
# Source: catalog-server/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-catalog-server-test-connection"
  labels:
    app.kubernetes.io/name: catalog-server
    helm.sh/chart: catalog-server-0.5.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-catalog-server:9010']
  restartPolicy: Never
